tdf#94222: Revert "slideshow: replace for_each with range-based loop"

This reverts commit ead5bc3cfb07a4e96e367e7904dc674ee5f5ccd6.

Change-Id: Icc2778cf904a71c4deaff4575d0de231acfc1335