slideshow/source/engine/slide/userpaintoverlay.cxx
@@ -36,6 +36,7 @@
 #include "screenupdater.hxx"
 #include "vieweventhandler.hxx"
 
+#include <boost/bind.hpp>
 #include <boost/noncopyable.hpp>
 #include "slide.hxx"
 #include "cursormanager.hxx"
@@ -75,9 +76,11 @@ namespace slideshow
                 mnSize(100),
                 mbActive( bActive )
             {
-                for( const auto& rView : rViews )
-                    this->viewAdded( rView );
-
+                std::for_each( rViews.begin(),
+                               rViews.end(),
+                               boost::bind( &PaintOverlayHandler::viewAdded,
+                                            this,
+                                            _1 ));
                 drawPolygons();
             }
 
