slideshow/source/engine/usereventqueue.cxx
@@ -143,8 +143,9 @@ public:
             bRet = !rVec.empty();
 
             // registered node found -> fire all events in the vector
-            for( const auto& pEvent : rVec )
-                mrEventQueue.addEvent( pEvent );
+            std::for_each( rVec.begin(), rVec.end(),
+                           boost::bind( &EventQueue::addEvent,
+                                        boost::ref( mrEventQueue ), _1 ) );
 
             rVec.clear();
         }
